--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_listar.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_listar.html
@@ -43,8 +43,8 @@
 					<td th:text="${hotel.tipohotel.nombre}"></td>
 					<td th:text="${hotel.distritos.nombre}"></td>
 					<td>
-						<a th:href="@{'/admin/hotel/editar/' + ${hotel.id}}">Editar</a> 
-						<a th:href="@{'/admin/hotel/eliminar/' + ${hotel.id}}">Eliminar</a>
+						<a th:href="@{'/EMotelWeb/admin/hotel/editar/' + ${hotel.id}}">Editar</a> 
+						<a th:href="@{'/EMotelWeb/admin/hotel/eliminar/' + ${hotel.id}}">Eliminar</a>
 					</td>
 				</tr>
 			</tbody>
