--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/admin/menu_lateral.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/admin/menu_lateral.html
@@ -7,22 +7,22 @@
     	<div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-list">
             <li class="nav-header">Hotel</li>
-            <li><a href="/admin/hotel/registrar">Registrar Hotel</a></li>
-            <li><a href="/admin/hotel/listar">Listar Hoteles</a></li>
+            <li><a href="/EMotelWeb/admin/hotel/registrar">Registrar Hotel</a></li>
+            <li><a href="/EMotelWeb/admin/hotel/listar">Listar Hoteles</a></li>
           </ul>
           <ul class="nav nav-list">
             <li class="nav-header">Tipo Hotel</li>
-            <li><a href="/admin/tipohotel/registrar">Registrar</a></li>
-            <li><a href="/admin/tipohotel/listar">Listar</a></li>
+            <li><a href="/EMotelWeb/admin/tipohotel/registrar">Registrar</a></li>
+            <li><a href="/EMotelWeb/admin/tipohotel/listar">Listar</a></li>
           </ul>
           <ul class="nav nav-list">
             <li class="nav-header">Restaurante</li>
-            <li><a href="/admin/restaurante/registrar">Registrar Restaurante</a></li>
-            <li><a href="/admin/restaurante/listar">Listar</a></li>
+            <li><a href="/EMotelWeb/admin/restaurante/registrar">Registrar Restaurante</a></li>
+            <li><a href="/EMotelWeb/admin/restaurante/listar">Listar</a></li>
           </ul>
           <ul class="nav nav-list">
             <li class="nav-header">Reservas</li>
-            <li><a href="/admin/reserva/listar">Listar</a></li>
+            <li><a href="/EMotelWeb/admin/reserva/listar">Listar</a></li>
           </ul>
         </div>    
     </div>
