--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/menu_lateral.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/menu_lateral.html
@@ -10,16 +10,16 @@ style="background-color:rgb(240,240,240); border-radius: 10px; padding: 20px; ma
 
 		<ul class="nav nav-list" style="margin-top: 10px; border-radius: 10px;">
             <li class="nav-header" style="background-color: #7D4427; color: white; border-radius: 10px; padding: 5px; font-size: 20px; ">Hotel</li>
-            <li style="color: #FF0000;"><a href="/hotel/listar/0">Listar</a></li>
+            <li style="color: #FF0000;"><a href="/EMotelWeb/hotel/listar/0">Listar</a></li>
          </ul>
           <ul class="nav nav-list" style="margin-top: 30px; border-radius: 10px; color: #FF0000;">
             <li class="nav-header" style="background-color: #7D4427; color: white; border-radius: 10px; padding: 5px; font-size: 20px; ">Restaurante</li>
-            <li><a href="/restaurante/listar/0">Listar</a></li>
+            <li><a href="/EMotelWeb/restaurante/listar/0">Listar</a></li>
           </ul>
           <ul class="nav nav-list" style="margin-top: 30px; border-radius: 10px;">
             <li class="nav-header" style="background-color: #7D4427; color: white; border-radius: 10px; padding: 5px; font-size: 20px; ">Reservas</li>
-            <li><a href="/reserva/listar">Listar</a></li>
-            <li><a href="/reserva/registrar">Registrar reserva</a>
+            <li><a href="/EMotelWeb/reserva/listar">Listar</a></li>
+            <li><a href="/EMotelWeb/reserva/registrar">Registrar reserva</a>
           </ul>
 </div>
 </body>
