--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/usuario/menu_superior.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/fragments/usuario/menu_superior.html
@@ -15,8 +15,8 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Pagina Principal</a></li>
-            <li><a href="/login">Cerrar sesion</a></li>
+            <li><a href="/EMotelWeb">Pagina Principal</a></li>
+            <li><a href="/EMotelWeb/login">Cerrar sesion</a></li>
           </ul>
         </div>
       </div>
