--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/index.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/index.html
@@ -30,9 +30,9 @@
   <nav class="navbar navbar-fixed-top navbar-inverse">
       <div class="container text-left">
         <div>
-          <a class="navbar-brand text-left" href="/" id="Home">EMotel</a>
-		  <a class="navbar-brand" href="/login" id="IniciarSesion">Iniciar Sesion</a>
-		  <a class="navbar-brand" href="/usuario/registrar" id="Registrarse">Registrarse</a>
+          <a class="navbar-brand text-left" href="/EMotelWeb" id="Home">EMotel</a>
+		  <a class="navbar-brand" href="/EMotelWeb/login" id="IniciarSesion">Iniciar Sesion</a>
+		  <a class="navbar-brand" href="/EMotelWeb/usuario/registrar" id="Registrarse">Registrarse</a>
         </div>
         
       </div>
