--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_editar.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_editar.html
@@ -25,7 +25,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" id="TituloHotelEditar" >Editar Hotel</h1>
 
-          <form method="post" th:object="${hotel}" action="/admin/hotel/guardar" name="formulario">
+          <form method="post" th:object="${hotel}" action="/EMotelWeb/admin/hotel/guardar" name="formulario">
           <input type="hidden"  th:field="*{id}">
           	<div class="form-group">
               <label>Nombre</label>
