--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_registrar.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/admin/hotel_registrar.html
@@ -21,7 +21,7 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" id = "TituloHotelRegistrar" >Registrar Hotel</h1>
 
-          <form method="post" th:object="${hotel}" action="/admin/hotel/guardar" name="formulario">
+          <form method="post" th:object="${hotel}" action="/EMotelWeb/admin/hotel/guardar" name="formulario">
           	<div class="form-group">
               <label>Nombre</label>
               <input th:field="*{nombre}" type="text" class="form-control" id="HotelNombre" placeholder="nombre" name="nombre"/>
