--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/reserva_lista.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/reserva_lista.html
@@ -20,13 +20,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">EMotel</a>
+          <a class="navbar-brand" href="/EMotelWeb">EMotel</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-           <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="/login">Iniciar Sesion</a></li>
-            <li><a href="/usuario/registrar">Registrarse</a></li>
+           <li class="active"><a href="/EMotelWeb">Inicio</a></li>
+            <li><a href="/EMotelWeb/login">Iniciar Sesion</a></li>
+            <li><a href="/EMotelWeb/usuario/registrar">Registrarse</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
@@ -72,8 +72,8 @@
 					<td th:text="${v.diasreserva}"></td>
 					<td th:text="${v.costototal}"></td>
 					<td>
-						<a th:href="@{'/reserva/editar/' + ${v.id}}">Editar</a> 
-						<a th:href="@{'/reserva/eliminar/' + ${v.id}}">Eliminar</a>
+						<a th:href="@{'/EMotelWeb/reserva/editar/' + ${v.id}}">Editar</a> 
+						<a th:href="@{'/EMotelWeb/reserva/eliminar/' + ${v.id}}">Eliminar</a>
 					</td>
 				</tr>
 			</tbody>
