--- a/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/restaurante_lista.html
+++ b/1.App/EMotelApp/EMotelWeb/src/main/resources/templates/restaurante_lista.html
@@ -18,9 +18,9 @@
       <div class="container">
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-           <li class="active"><a href="/">Inicio</a></li>
-            <li><a href="/login">Iniciar Sesion</a></li>
-            <li><a href="/usuario/registrar">Registrarse</a></li>
+           <li class="active"><a href="/EMotelWeb">Inicio</a></li>
+            <li><a href="/EMotelWeb/login">Iniciar Sesion</a></li>
+            <li><a href="/EMotelWeb/usuario/registrar">Registrarse</a></li>
           </ul>
         </div>
       </div>
@@ -91,7 +91,7 @@
       <hr>
       <script type="text/javascript">
 	      function enviar_valores(id){
-				location.href='/restaurante/listar/'+id.toString();
+				location.href='/EMotelWeb/restaurante/listar/'+id.toString();
 		  } 
 		</script>
 
